# futura

./: .gitignore  AGENTS.md  ARCHITECTURE_REFACTORING.md  ARM64_BUILD_STATUS.md  ARM64_DEBUGGING_GUIDE.md  CONTRIBUTING.md  EPOLL_ANALYSIS.md  EPOLL_FILES.md  EPOLL_SUMMARY.md  FB_CONSOLE_INTEGRATION.md  FB_CONSOLE_README.md  FIPC_HOST_FIX.md  FORK_BUG_INVESTIGATION.md  FRAMEBUFFER_CONSOLE_SUMMARY.md  FSD_INTEGRATION_SUMMARY.txt  IMPLEMENTATION_PLAN.md  KERNEL_STRUCTURE_OVERVIEW.md  LICENSE  Makefile  PHASE_2_COMPLETION_REPORT.md  PLATFORM_ARM64_SUPPORT.md  PROCESS_MANAGEMENT.md  PROCESS_MANAGEMENT_QUICK_REF.md  README.md  README_EPOLL.md  REFACTOR_PLAN.md  SHELL_README.md  SMAP_FIX_SUMMARY.md  TESTING_M2.md  WAYLAND_ALTERNATIVE_SOCKET_STRATEGIES.md  WAYLAND_CODE_MODIFICATION_CHECKLIST.md  WAYLAND_COMPLETE_SESSION_LOG.md  WAYLAND_DIAGNOSTIC_PREDICTION.md  WAYLAND_DOCUMENTATION_INDEX.md  WAYLAND_FINAL_SUMMARY.md  WAYLAND_FIXES_PROGRESS.md  WAYLAND_IMPLEMENTATION_TEMPLATE_EACCES.md  WAYLAND_MASTER_IMPLEMENTATION_GUIDE.md  WAYLAND_PRE_TEST_CHECKLIST.md  WAYLAND_PROACTIVE_SOLUTIONS.md  (+17 more)
boot/: rpi.ld  (+1 more)
drivers/: Cargo.toml  GPU_DRIVER_README.md
drivers/.cargo/: config.toml
drivers/input/: ps2_kbd.c  ps2_mouse.c
drivers/rust/.cargo/: config.toml
drivers/rust/acpi_backlight/: Cargo.toml
drivers/rust/acpi_battery/: Cargo.toml
drivers/rust/acpi_button/: Cargo.toml
drivers/rust/acpi_ec/: Cargo.toml
drivers/rust/acpi_pm/: Cargo.toml
drivers/rust/acpi_thermal/: Cargo.toml
drivers/rust/ahci/: Cargo.toml
drivers/rust/amd_ccp/: Cargo.toml
drivers/rust/amd_df/: Cargo.toml
drivers/rust/amd_gpio/: Cargo.toml
drivers/rust/amd_gpu/: Cargo.toml
drivers/rust/amd_i2c/: Cargo.toml
drivers/rust/amd_iommu/: Cargo.toml
drivers/rust/amd_mp2/: Cargo.toml
drivers/rust/amd_nbio/: Cargo.toml
drivers/rust/amd_psp/: Cargo.toml
drivers/rust/amd_pstate/: Cargo.toml
drivers/rust/amd_sbtsi/: Cargo.toml
drivers/rust/amd_sev/: Cargo.toml
drivers/rust/amd_smbus/: Cargo.toml
drivers/rust/amd_smn/: Cargo.toml
drivers/rust/amd_spi/: Cargo.toml
drivers/rust/amd_umc/: Cargo.toml
drivers/rust/amd_wdt/: Cargo.toml
drivers/rust/amd_xgbe/: Cargo.toml
drivers/rust/apple_aic/: Cargo.toml
drivers/rust/apple_ans2/: Cargo.toml
drivers/rust/apple_bcm/: Cargo.toml
drivers/src/: bluetooth.rs  ethernet.rs  gpio.rs  gpu_audio.rs  gpu_crtc.rs  gpu_framebuffer.rs  gpu_hdmi.rs  gpu_opengl_es.rs  gpu_software.rs  gpu_v3d.rs  lib.rs  mailbox.rs  registers.rs  uart.rs  usb.rs  wifi.rs
drivers/tty/: console.c  kbd_console.c  tty_ldisc.c
drivers/video/: fb.c  fb_console.c
(+1360 files in other folders)
